[tool.poetry]
name = "aaronsagents"
version = "0.1.0"
description = ""
authors = ["Aaron Heise <5148966+acehoss@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
langchain-anthropic = "^0.1.11"
streamlit = "^1.33.0"
wikipedia = "^1.4.0"
langchain-openai = "^0.1.3"

[tool.poetry.scripts]
aagents = 'AaronsAgents.aagents:aa_main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
